# aruco_test

./: .gitignore  CMakeLists.txt  README.md  cmake_vs2017.bat
DxgiUtil/: CMakeLists.txt  CompileShaderFromFile.cpp  CompileShaderFromFile.h  DeferredDeviceContext.cpp  DeferredDeviceContext.h  DeviceManager.cpp  DeviceManager.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  ThreadName.h  constantbuffer.cpp  constantbuffer.h  debugprint.h  libdxgiutil.h  premake4.lua  shader.cpp  shader.h
aruco_uwp/: aruco_uwp.sln
aruco_uwp/DxgiUtil/: DxgiUtil.vcxproj  DxgiUtil.vcxproj.filters
aruco_uwp/aruco/: aruco.vcxproj  aruco.vcxproj.filters
aruco_uwp/aruco_uwp/: App.cpp  App.h  Package.appxmanifest  aruco_uwp.vcxproj  aruco_uwp.vcxproj.filters  aruco_uwpMain.cpp  aruco_uwpMain.h  aruco_uwp_TemporaryKey.pfx  rect.hlsl.txt
aruco_uwp/aruco_uwp/Common/: DeviceResources.cpp  DeviceResources.h  DirectXHelper.h  StepTimer.h
aruco_uwp/aruco_uwp/Content/: CaptureRenderer.cpp  CaptureRenderer.h  Sample3DSceneRenderer.cpp  Sample3DSceneRenderer.h  SampleFpsTextRenderer.cpp  SampleFpsTextRenderer.h  SamplePixelShader.hlsl  SampleVertexShader.hlsl  ShaderStructures.h
src/: cameraparameters.cpp  cameraparameters.h  checkrectcontour.cpp  cvdrawingutils.cpp  dictionary.cpp  marker.cpp  marker.h  markerdetector.h  markermap.h  posetracker.cpp  posetracker.h
src/markerlabelers/: dictionary_based.cpp
utils_d3d11/: CMakeLists.txt  aruco_test_d3d11.cpp  capture.cpp  capture.h  detector.cpp  detector.h  marker.hlsl  premake4.lua  win32window.cpp  win32window.h
utils_gl/: CMakeLists.txt  aruco_test_gl.cpp  aruco_test_markermap_gl.cpp  renderer.cpp  renderer.h
utils_glfw/: ArUcoImpl.cpp  ArUcoImpl.h  CMakeLists.txt  arapp.cpp  arapp.h  capture.cpp  capture.h  glfwloop.cpp  glfwloop.h  main.cpp  memorybuffer.cpp  memorybuffer.h  opengl.cpp  opengl.h  premake4.lua  udpsender.cpp  udpsender.h
