CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(aruco)

FIND_PACKAGE(OpenCV REQUIRED )
SET (ARUCO_REQUIRED_LIBRARIES ${OpenCV_LIBS})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT)#standard package
IF(GLUT_FOUND) #else, freeglut
    MESSAGE(STATUS "GLUT_glut_LIBRARY=${GLUT_glut_LIBRARY}")
ELSE()
    FIND_LIBRARY(GLUT_glut_LIBRARY NAMES freeglut)
ENDIF()
MESSAGE(STATUS "GLUT_glut_LIBRARY=${GLUT_glut_LIBRARY}")
STRING(REPLACE lib/freeglut.lib debug/lib/freeglutd.lib GLUT_glut_DEBUG_LIBRARY ${GLUT_glut_LIBRARY})
MESSAGE(STATUS "GLUT_glut_DEBUG_LIBRARY=${GLUT_glut_DEBUG_LIBRARY}")

IF ( (NOT GLUT_glut_LIBRARY AND NOT GLUT_FOUND) OR NOT OPENGL_gl_LIBRARY)
    set(GL_FOUND "NO")
ELSE()
    set(GL_FOUND "YES")
    set (OPENGL_LIBS  general 
        ${OPENGL_gl_LIBRARY} 
        ${OPENGL_glu_LIBRARY} 
        optimized ${GLUT_glut_LIBRARY} 
        debug ${GLUT_glut_DEBUG_LIBRARY}
        )
ENDIF()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(utils_gl)

