CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(aruco)

FIND_PACKAGE(OpenCV REQUIRED )
SET (ARUCO_REQUIRED_LIBRARIES ${OpenCV_LIBS})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT)
MESSAGE(STATUS "GLUT_glut_LIBRARY=${GLUT_glut_LIBRARY}")
STRING(REPLACE lib/freeglut.lib debug/lib/freeglutd.lib GLUT_glut_DEBUG_LIBRARY ${GLUT_glut_LIBRARY})
MESSAGE(STATUS "GLUT_glut_DEBUG_LIBRARY=${GLUT_glut_DEBUG_LIBRARY}")

IF (GLUT_FOUND)
    set (OPENGL_LIBS  general 
        ${OPENGL_gl_LIBRARY} 
        ${OPENGL_glu_LIBRARY} 
        optimized ${GLUT_glut_LIBRARY} 
        debug ${GLUT_glut_DEBUG_LIBRARY}
        )
ENDIF()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(utils_gl)

