INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src 
    ../DxgiUtil
    ${GNULIBS_INCLUDE_DIR}
    )
LINK_LIBRARIES(${PROJECT_NAME} ${REQUIRED_LIBRARIES} )

FILE(GLOB SRCS *.cpp *.h)

INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIRS})

ADD_EXECUTABLE(aruco_test_d3d11 ${SRCS})

TARGET_LINK_LIBRARIES(aruco_test_d3d11
    aruco
    DxgiUtil
    )

